add pravicy policy of smart note app

--- a/index.html
+++ b/index.html
@@ -1,42 +1,78 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-	<title>ShopMall</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Smart Note Privacy Policy</title>
+  <style>
+    body {
+      margin: 0;
+      padding: 0;
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      background-color: #f9f9f9;
+      color: #333;
+    }
+
+    .container {
+      max-width: 700px;
+      margin: 80px auto;
+      padding: 40px;
+      background-color: #fff;
+      border-radius: 12px;
+      box-shadow: 0 4px 12px rgba(0, 0, 0, 0.08);
+    }
+
+    h1 {
+      font-size: 2em;
+      color: #007acc;
+      margin-bottom: 20px;
+    }
+
+    p {
+      line-height: 1.6;
+      font-size: 1.1em;
+    }
+
+    strong {
+      color: #000;
+    }
+  </style>
 </head>
 <body>
-<header>
-	<nav class="nav">
-		<ul>
-			<li><a href="index.html">Տուն</a></li>
-			<li><a href="dishes.html"> Ուտեստներ</a></li>
-			<li><a href="offers.html"> Առաջարկներ</a></li>
-			<li><a href="contact.html">Կապ</a></li>
-		</ul>
-	</nav>
-</header>
-<body>
-<section>
-	<h1 class="section-header">Մեր մասին</h1>
-	<img class="about-image" src="ShopMall.jpg">
-	<p>
-		ShopMall.am-ն օնլայն առևտրի հարթակ է, որտեղ միավորված են հարյուրավոր խանութներ, ռեստորաններ (Food Court) և սուպերմարկետ բաժինը: Ներկայացված խանութներում դուք կարող եք գտնել ինչպես հայկական արտադրության ապրանքատեսականի, այնպես էլ որակյալ արտասահմանյան ապրանքներ: Food Court բաժնում ներկայացված են բազմաթիվ ռեստորանների ճաշացանկեր, ինչպես նաև դիետիկ և բուսակերների համար նախատեսված ուտեստներ: Սուպերմարկետն առաջարկում է մթերային, տնտեսական և կենցաղային ապրանքների լայն ընտրանի: 
-	</p>
-	
-	<p>
-		ShopMall.am-ի գործունեության հիմքում ընկած է հաճախորդի համար առավելագույնս շահավետ և որակյալ ծառայությունների մատուցումը: Օնլայն գնումների գործընթացն ապահովելիս մենք ուշադրություն ենք դարձնում հաճախորդների կարիքների և պահանջմունքների վրա՝ ներկայացնելով բարձրորակ ապրանքների լայն տեսականի և հնարավորինս ցածր գներ:
-	</p>
-</section>
-<footer class="main-footer">
-	<div class="container main-footer-container">
-	<h3>
-		ShopMall.am
-	</h3>
-	<ul class="nav footer-nav">
-		<li><a href="facebook.com"><img src="facebook.png"></a></li>
-		<li><a href="instagram.com"><img src="instagram.png"></a></li>
-	</ul>
-	</div>
-</footer>
+  <div class="container">
+    <h1>Smart Note Privacy Policy</h1>
+    <p>
+      At Smart Note, we are committed to protecting your privacy. This policy outlines how your data is handled within the app.
+    </p>
+
+    <p>
+      <strong>Local Data Storage:</strong><br />
+      All notes and personal information are stored locally on your device. No data is automatically uploaded or shared with external servers unless explicitly requested by you.
+    </p>
+
+    <p>
+      <strong>No Ads or Trackers:</strong><br />
+      The app does not contain any advertisements, analytics, or tracking mechanisms. Your activity remains private and is not monitored.
+    </p>
+
+    <p>
+      <strong>AI-Powered Summarization (Optional Feature):</strong><br />
+      If you choose to use the AI assistant feature to summarize your notes, the selected content will be securely transmitted to a third-party language model provider (e.g., Google Gemini or OpenAI ChatGPT) for processing. This action only occurs when you explicitly request a summary. No content is shared without your consent.
+    </p>
+
+    <p>
+      <strong>Third-Party Providers:</strong><br />
+      The AI summarization feature may utilize APIs from external providers such as Google or OpenAI. We recommend reviewing their respective privacy policies for more details on how they handle submitted data.
+    </p>
+
+    <p>
+      <strong>Your Control:</strong><br />
+      Use of the AI assistant is entirely optional. You may continue to use all core note-taking features without ever engaging with the AI assistant.
+    </p>
+
+    <p>
+      By using Smart Note, you are assured that your privacy is respected and your data remains under your control.
+    </p>
+  </div>
 </body>
 </html>
-
