--- a/index.html
+++ b/index.html
@@ -15,26 +15,136 @@
 
     .container {
       max-width: 700px;
-      margin: 80px auto;
-      padding: 40px;
+      margin: 60px auto;
+      padding: 30px 20px;
       background-color: #fff;
       border-radius: 12px;
       box-shadow: 0 4px 12px rgba(0, 0, 0, 0.08);
     }
 
     h1 {
-      font-size: 2em;
+      font-size: 1.8em;
       color: #007acc;
       margin-bottom: 20px;
     }
 
     p {
       line-height: 1.6;
-      font-size: 1.1em;
+      font-size: 1.05em;
+      margin-bottom: 16px;
     }
 
     strong {
       color: #000;
+    }
+
+    @media (max-width: 480px) {
+      .container {
+        margin: 30px 15px;
+        padding: 20px 15px;
+      }
+
+      h1 {
+        font-size: 1.5em;
+      }
+
+      p {
+        font-size: 1em;
+      }
+    }
+  </style>
+</head>
+<body>
+  <div class="container">
+    <h1>Smart Note Privacy Policy</h1>
+    <p>
+      At Smart Note, we are committed to protecting your privacy. This policy outlines how your data is handled within the app.
+    </p>
+
+    <p>
+      <strong>Local Data Storage:</strong><br />
+      All notes and personal information are stored locally on your device. No data is automatically uploaded or shared with external servers unless explicitly requested by you.
+    </p>
+
+    <p>
+      <strong>No Ads or Trackers:</strong><br />
+      The app does not contain any advertisements, analytics, or tracking mechanisms. Your activity remains private and is not monitored.
+    </p>
+
+    <p>
+      <strong>AI-Powered Summarization (Optional Feature):</strong><br />
+      If you choose to use the AI assistant feature to summarize your notes, the selected content will be securely transmitted to a third-party language model provider (e.g., Google Gemini or OpenAI ChatGPT) for processing. This action only occurs when you explicitly request a summary. No content is shared without your consent.
+    </p>
+
+    <p>
+      <strong>Third-Party Providers:</strong><br />
+      The AI summarization feature may utilize APIs from external providers such as Google or OpenAI. We recommend reviewing their respective privacy policies for more details on how they handle submitted data.
+    </p>
+
+    <p>
+      <strong>Your Control:</strong><br />
+      Use of the AI assistant is entirely optional. You may continue to use all core note-taking features without ever engaging with the AI assistant.
+    </p>
+
+    <p>
+      By using Smart Note, you are assured that your privacy is respected and your data remains under your control.
+    </p>
+  </div>
+</body>
+</html>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Smart Note Privacy Policy</title>
+  <style>
+    body {
+      margin: 0;
+      padding: 0;
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      background-color: #f9f9f9;
+      color: #333;
+    }
+
+    .container {
+      max-width: 700px;
+      margin: 60px auto;
+      padding: 30px 20px;
+      background-color: #fff;
+      border-radius: 12px;
+      box-shadow: 0 4px 12px rgba(0, 0, 0, 0.08);
+    }
+
+    h1 {
+      font-size: 1.8em;
+      color: #007acc;
+      margin-bottom: 20px;
+    }
+
+    p {
+      line-height: 1.6;
+      font-size: 1.05em;
+      margin-bottom: 16px;
+    }
+
+    strong {
+      color: #000;
+    }
+
+    @media (max-width: 480px) {
+      .container {
+        margin: 30px 15px;
+        padding: 20px 15px;
+      }
+
+      h1 {
+        font-size: 1.5em;
+      }
+
+      p {
+        font-size: 1em;
+      }
     }
   </style>
 </head>
