--- a/flexlogger.html
+++ b/flexlogger.html
@@ -714,9 +714,7 @@ FlexLogger.init {
     <footer>
         <div class="footer-content">
             <div class="social-links">
-                <a href="#"><i class="fab fa-github"></i></a>
-                <a href="#"><i class="fab fa-twitter"></i></a>
-                <a href="#"><i class="fas fa-book"></i></a>
+                <a href="#"><i class="fab fa-github">https://github.com/goodluck3301/FlexLogger</i></a>
             </div>
             <p>&copy; 2025 FlexLogger. Made with ❤️ for the Android community.</p>
         </div>
