Add AI Crash Analysis feature to feature list

--- a/flexlogger.html
+++ b/flexlogger.html
@@ -620,6 +620,8 @@
                             <li><strong>Logcat</strong> - Standard Android logging</li>
                             <li><strong>File Logging</strong> - Persistent file storage</li>
                             <li><strong>Custom Destinations</strong> - Extensible interface</li>
+                            <li><strong>AI Crash Analysis</strong> - Automatically analyzes crash messages and prints suggested solutions</li>
+                             
                         </ul>
                     </div>
 
