--- a/flexlogger.html
+++ b/flexlogger.html
@@ -1015,44 +1015,46 @@ FlexLogger.init {
             </div>
         </section>
 
-        <section id="changelog" class="section">
-            <div class="container">
-                <h2>📜 Changelog</h2>
-                <div class="changelog-grid">
-                    <div class="changelog-entry">
-                        <h3>v1.2 <span class="changelog-date">2025</span></h3>
-                        <p class="changelog-description">Enhanced logging capabilities and stability improvements</p>
-                        <ul class="feature-list">
-                            <li><strong>Features</strong>:
-                                <ul class="feature-list">
-                                    <li>Add AI crash analysis to provide solutions in Logcat</li>
-                                </ul>
-                            </li>
-                            <li><strong>Refactors</strong>:
-                                <ul class="feature-list">
-                                    <li>Refactor log_* functions</li>
-                                    <li>Update Java version to 17</li>
-                                </ul>
-                            </li>
+    <section id="changelog" class="section">
+    <div class="container">
+        <h2>📜 Changelog</h2>
+        <div class="changelog-grid">
+            <div class="changelog-entry">
+                <h3>v1.2 <span class="changelog-date">2025</span></h3>
+                <p class="changelog-description">Enhanced logging capabilities and stability improvements</p>
+                <ul class="feature-list">
+                    <li><strong>Features</strong>
+                        <ul>
+                            <li>Added AI crash analysis to provide solutions in Logcat</li>
                         </ul>
-                    </div>
-                    <div class="changelog-entry">
-                        <h3>v1.0.0 <span class="changelog-date">June 15, 2025</span></h3>
-                        <p class="changelog-description">Initial release of FlexLogger</p>
-                        <ul class="feature-list">
-                            <li>Added core logging functionality with Logcat support</li>
-                            <li>Implemented file logging with rotation</li>
-                            <li>Introduced pretty printing for JSON and XML</li>
-                            <li>Added customizable configuration via Kotlin DSL</li>
+                    </li>
+                    <li><strong>Refactors</strong>
+                        <ul>
+                            <li>Refactored `log_*` functions</li>
+                            <li>Updated Java version to 17</li>
                         </ul>
-                    </div>
-                </div>
-
-                <div class="changelog-expand">
-                    <a href="#" class="btn btn-secondary" onclick="toggleAllChangelogs()">Show All Versions</a>
-                </div>
+                    </li>
+                </ul>
             </div>
-        </section>
+
+            <div class="changelog-entry">
+                <h3>v1.0.0 <span class="changelog-date">June 15, 2025</span></h3>
+                <p class="changelog-description">Initial release of FlexLogger</p>
+                <ul class="feature-list">
+                    <li>Added core logging functionality with Logcat support</li>
+                    <li>Implemented file logging with automatic rotation</li>
+                    <li>Introduced pretty printing for JSON and XML</li>
+                    <li>Added customizable configuration via Kotlin DSL</li>
+                </ul>
+            </div>
+        </div>
+
+        <div class="changelog-expand">
+            <a href="#" class="btn btn-secondary" onclick="toggleAllChangelogs()">Show All Versions</a>
+        </div>
+    </div>
+</section>
+
     </main>
 
     <footer class="footer">
