Comment out changelog section
Comment out the changelog section in flexlogger.html

--- a/flexlogger.html
+++ b/flexlogger.html
@@ -1015,7 +1015,7 @@ FlexLogger.init {
             </div>
         </section>
 
-    <section id="changelog" class="section">
+    <!-- <section id="changelog" class="section">
     <div class="container">
         <h2>📜 Changelog</h2>
         <div class="changelog-grid">
@@ -1053,7 +1053,7 @@ FlexLogger.init {
             <a href="#" class="btn btn-secondary" onclick="toggleAllChangelogs()">Show All Versions</a>
         </div>
     </div>
-</section>
+</section> -->
 
     </main>
 
